# internal/interfaces/http/dto/report.go
@@ -5,8 +5,8 @@ type ReportResponse struct {
 	Expenses    int64     `json:"expenses" example:"5000" binding:"required"`
 	NetProfit   int64     `json:"net_profit" example:"5000" binding:"required"`
 	Categorys   []string  `json:"categorys" example:"[\"Food\", \"Transport\"]" binding:"required"`
-	Amounts     []int64   `json:"amounts" example:"[1000, 2000]" binding:"required"`
-	Percentages []float64 `json:"percentages" example:"[0.33, 0.67]" binding:"required"`
+	Amounts     []int64   `json:"amounts" example:"1000,2000" binding:"required"`
+	Percentages []float64 `json:"percentages" example:"0.33,0.67" binding:"required"`
 }
 
 type ReportSummaryResponse struct {
